# mocha

./: .dockerignore  .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  DESIGN_SYSTEM_CHECKLIST.md  DESIGN_SYSTEM_SETUP.md  DESIGN_SYSTEM_TREE.txt  Dockerfile  Dockerfile.ci  Dockerfile.legacy  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION.md  PASSOFF.md  PDF_TOOLING_PLAN.md  QUICK_START.md  README-PATTERNS-ANALYSIS.md  README.md  RUST_QUALITY.md  SECURITY_AUDIT_296.md  TAURI_OPTIMIZATION_PROJECT.md  build-linux-musl.sh  build-windows.bat  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
.github/: CICD_DIAGNOSTIC.md  labeler-config-srvaroa.yml  pull_request_template.md
.github/config/: .files.yaml
.github/workflows/: PR-Demo-cleanup.yml  auto-labelerV2.yml  bloat.yml  build.yml  ci.yml  perf.yml  release-docker.yml
docs/: COMPATIBILITY-MATRIX.md  FRONTEND-PERF.md  SECURITY-AUDIT.md  perf-baseline.md
docs/roadmap/: 230-annotations.md  232-forms.md  234-alt-text.md  235-reflow.md  255-reference-hardware.md  256-metrics.md  257-slos.md  275-pdf-settings.md  278-sentry.md  283-e2e-test.md
frontend/editor/public/: og-metadata.json
mint/: .gitignore  CLAUDE.md  README.md  SECURITY_GUIDE.md  docker-compose.yml  index.html  package.json  vite.config.ts
mint/.github/: pull_request_template.md
mint/.github/workflows/: bloat.yml  ci.yml  perf.yml  release.yml
mint/docs/: COMPATIBILITY-MATRIX.md  VERIFICATION.md
mint/docs/roadmap/: 229-ocr.md  231-redaction.md  233-structure-tags.md  236-a11y-validation.md  282-ci-matrix.md
mint/src/: App.tsx  index.css  types.ts
mint/src-tauri/: Cargo.toml
mint/src-tauri/.cargo/: config.toml
mint/src-tauri/benches/: compression.rs  fixtures.rs  preflight.rs
mint/src-tauri/capabilities/: default.json
mint/src-tauri/src/: analytics_cmds.rs  batch_cmds.rs  cache.rs  cloud_backup.rs  cloud_import.rs  comm_cmds.rs  commands.rs  db.rs  finance_cmds.rs  finance_totals.rs  import.rs  invoice_pdf.rs  keychain.rs  lib.rs  logging.rs  metrics.rs  models.rs  observability.rs  pdf_cmds.rs  security.rs  settings_cmds.rs
mint/src-tauri/src/qb/: api.rs  mapper.rs
mint/src-tauri/tests/: smoke.rs
mint/src/components/: AnnotationLayer.css  ArtApprovalPanel.css  ArtApprovalPanel.tsx  ArtworkPreview.tsx  BusinessOnboarding.css  BusinessOnboarding.tsx  ClientForm.css  ClientList.css  ClientList.tsx  Dashboard.tsx  DashboardFilters.tsx  EstimateEditor.css  EstimateEditor.tsx  EstimateList.tsx  FulfillmentPanel.css  FulfillmentPanel.tsx  InventoryList.css  InventoryList.tsx  InvoiceEditor.tsx  InvoiceList.css  InvoiceList.tsx  JobSpecsPanel.css  JobSpecsPanel.tsx  ManagementView.css  ManagementView.tsx  OrderDetail.css  OrderDetail.tsx  OrderKanban.css  OrderKanban.tsx  OrderList.css  OrderListView.tsx  PDFToolsPanel.css  PDFToolsPanel.tsx  POSView.tsx  PaymentPanel.tsx  QBSyncPanel.css  RedactionLayer.css  ReminderPanel.tsx  SettingsPanel.tsx  Welcome.css
mint/src/design-system/: index.d.ts  readme.md  styles.css
mint/src/i18n/: en.ts
mint/src/pricing/: PriceBookEditor.css  QuoteBuilder.tsx  priceBook.test.ts  priceBook.ts
scripts/: audit_ipc_surface.py  generate_requirements.bat  perf.sh
src/: App.css  App.tsx  i18n.ts  index.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/benches/: compression.rs  fixtures.rs  preflight.rs
src-tauri/src/: ai_check.rs  ai_cmds.rs  analytics_cmds.rs  batch_cmds.rs  cache.rs  cloud_backup.rs  cloud_import.rs  comm_cmds.rs  commands.rs  commands_extra.rs  db.rs  db_cmds.rs  email.rs  finance_cmds.rs  ftp.rs  import.rs  import_cmds.rs  job_cmds.rs  keychain.rs  lib.rs  logging.rs  metrics.rs  models.rs  observability.rs  pdf_cmds.rs  preflight_cmds.rs  security.rs  settings_cmds.rs  text_cmds.rs  workbook_cmds.rs
src-tauri/src/pdf/: action_list.rs  action_list_debugger.rs  approval_sheet.rs  bleed.rs  boxes.rs  color.rs  compress.rs  content_stream.rs  engine.rs  fonts.rs  images.rs  metadata.rs  mod.rs  ocr.rs  overprint.rs  pdfx.rs  redact.rs  registry.rs  security.rs  ticket.rs  transforms.rs  watcher.rs
src-tauri/src/qb/: api.rs  cmds.rs  mapper.rs  mod.rs  oauth.rs
src-tauri/tests/: bleed_round_trip.rs  e2e.rs  preflight_regression.rs  redaction_round_trip.rs
src-tauri/tests/pdf_corpus/: README.md
src/components/: AnnotationLayer.tsx  ArtApprovalPanel.css  ArtApprovalPanel.tsx  ArtworkPreview.tsx  BusinessOnboarding.css  BusinessOnboarding.tsx  ClientForm.tsx  ClientList.tsx  CloudImportDialog.tsx  Dashboard.css  Dashboard.tsx  DashboardFilters.css  DesignSystemExample.tsx  EstimateEditor.css  EstimateEditor.tsx  EstimateList.css  EstimateList.tsx  FulfillmentPanel.tsx  InventoryList.tsx  InvoiceEditor.css  InvoiceEditor.tsx  InvoiceList.tsx  JobSpecsPanel.tsx  ManagementView.tsx  OrderDetail.css  OrderDetail.tsx  OrderKanban.css  OrderKanban.tsx  OrderList.tsx  OrderListView.css  OrderListView.tsx  PDFToolsPanel.css  PDFToolsPanel.tsx  PDFView.css  PDFView.tsx  POSView.css  POSView.tsx  PaymentPanel.css  PaymentPanel.tsx  QBSyncPanel.css  (+11 more)
src/components/common/: VirtualList.tsx
src/components/pdf/: ActionListPanel.tsx  AnalyticsDashboard.tsx  BatchPanel.tsx  HotFolderPanel.tsx  ImageEditPanel.tsx  LayerPanel.tsx  PDFTools.css  PDFToolsView.tsx  PageOperationsPanel.tsx  ProfileEditor.tsx  SettingsPanel.tsx  TextEditPanel.tsx  ViewerTools.tsx
src/components/preflight/: AnalyticsDashboard.tsx  BarcodeCheck.tsx  BleedCheck.tsx  CertifiedVersionPanel.tsx  ColorConversionPanel.tsx  HelpPanel.tsx  ImageEditPanel.tsx  LayerPanel.tsx  MakePdfXWizard.tsx  PageOperationsPanel.tsx  PdfInspector.tsx  PreflightReport.tsx
src/components/settings/: IntegrationsPanel.css  IntegrationsPanel.tsx
src/design-system/: .thumbnail  INTEGRATION_GUIDE.md  SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  index.js  index.ts  readme.md  styles.css
src/design-system/guidelines/: brand-logo.html  (+7 more)
src/i18n/: en.ts
src/pricing/: PriceBookEditor.tsx  QuoteBuilder.css  priceBook.test.ts  priceBook.ts  priceBookPrefs.ts
(+116 files in other folders)
