[package]
name = "app"
version = "0.1.0"
description = "Frappe - Print Shop Manager"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[features]
# SQLCipher at-rest encryption (#99). When enabled, the rusqlite feature below
# must be switched from "bundled" to "bundled-sqlcipher" and the build host
# must provide OpenSSL (Strawberry Perl for the vendored build, or OPENSSL_DIR
# pointing at a pre-built OpenSSL).
#
#   cargo build --features sqlcipher
#
# Default build uses plain SQLite (no at-rest encryption). The encryption code
# paths in db.rs are gated on the `sqlcipher` cfg flag and compile out cleanly.
sqlcipher = []

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
printpdf = "0.7"
qrcode = "0.14"
keyring = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
open = "5"
getrandom = "0.2"
calamine = "0.24"
csv = "1.3"
chrono = "0.4"
# Use rustls-tls instead of native-tls to avoid requiring OpenSSL dev
# headers on Linux (libssl-dev / openssl-devel) and the Windows WebView2
# SSL stack. Default features include native-tls which pulls in openssl-sys.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
pdfium-render = "0.9"
lopdf = "0.41"
image = "0.25"
flate2 = "1.0"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
url = "2"
# IMPORTANT: When enabling the `sqlcipher` feature above, also change the
# rusqlite feature from "bundled" to "bundled-sqlcipher" and add:
#   libsqlite3-sys = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
# (Requires OpenSSL on the build host — see feature comment.)
rusqlite = { version = "0.34", features = ["bundled"] }
# OS-level exclusive file lock for the sidecar `frappe.lock` file so two app
# instances cannot run simultaneously (#147). `fs2` provides
# `FileExt::try_lock_exclusive` across Windows + macOS.
fs2 = "0.4"
