[package]
name = "app"
version = "0.1.0"
description = "Frappe - Print Shop Manager"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[features]
# SQLCipher at-rest encryption (#99). When enabled, the rusqlite feature below
# must be switched from "bundled" to "bundled-sqlcipher" and the build host
# must provide OpenSSL (Strawberry Perl for the vendored build, or OPENSSL_DIR
# pointing at a pre-built OpenSSL).
#
#   cargo build --features sqlcipher
#
# Default build uses plain SQLite (no at-rest encryption). The encryption code
# paths in db.rs are gated on the `sqlcipher` cfg flag and compile out cleanly.
sqlcipher = []

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Release profile: small, optimized binary for distribution.
# Output runs on Windows 10+ (Tauri requires WebView2), macOS 12+,
# and Linux (glibc 2.17+ for dynamic, or any Linux via musl static build).
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"   # smaller binary + no unwinding overhead (Tauri v2 standard)
strip = "symbols"
# Per-crate overrides (issue #288): the inlined LTO/1cu settings are the
# correct default for the release artifact, but dev-only crates that
# take a long time to build (lopdf, image, reqwest, pdfium-render)
# compile faster when opt-level is dropped in release. We keep the
# hot path (app_lib + lopdf) at -O3.
[profile.release.package."*"]
opt-level = 3
[profile.release.package."lopdf"]
opt-level = 3
[profile.release.package."image"]
opt-level = 3

# Faster debug builds without sacrificing much runtime speed during dev.
[profile.dev]
opt-level = 1

# Bench profile for the regression-suite benchmarks in `benches/`.
[profile.bench]
opt-level = 3
lto = "thin"
debug = true

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
printpdf = "0.7"
qrcode = "0.14"
keyring = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
open = "5"
getrandom = "0.2"
calamine = "0.24"
csv = "1.3"
chrono = "0.4"
# Use rustls-tls instead of native-tls to avoid requiring OpenSSL dev
# headers on Linux (libssl-dev / openssl-devel) and the Windows WebView2
# SSL stack. Default features include native-tls which pulls in openssl-sys.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
pdfium-render = "0.9"
lopdf = "0.41"
image = "0.25"
flate2 = "1.0"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
url = "2"
# IMPORTANT: When enabling the `sqlcipher` feature above, also change the
# rusqlite feature from "bundled" to "bundled-sqlcipher" and the build host
# must provide OpenSSL (Strawberry Perl for the vendored build, or OPENSSL_DIR
# pointing at a pre-built OpenSSL).
# (Requires OpenSSL on the build host вЂ” see feature comment.)
rusqlite = { version = "0.34", features = ["bundled"] }
# OS-level exclusive file lock for the sidecar `frappe.lock` file so two app
# instances cannot run simultaneously (#147). `fs2` provides
# `FileExt::try_lock_exclusive` across Windows + macOS.
fs2 = "0.4"
lru = "0.12"
# SHA-256 for the redaction audit hash-chain (#231). Each applied redaction
# operation stores the SHA-256 of the resulting PDF and a link to the previous
# operation's hash, giving a tamper-evident compliance trail.
sha2 = "0.10"

# в”Ђв”Ђ Issue #229 вЂ” OCR (Tesseract backend) в”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђ
# `tempfile` provides temporary file/directory creation for storing rendered
# PDF pages as images before OCR processing. Automatically cleaned up on drop.
tempfile = "3"
# `which` locates executables in PATH (check if tesseract is installed).
which = "6"

# в”Ђв”Ђ Issue #229 вЂ” OCR (Google Cloud Vision backend) в”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђ
# `base64` encodes images for Cloud Vision API request bodies.
base64 = "0.22"

# в”Ђв”Ђ Issue #301 / #269 вЂ” Hot-folder watcher в”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђ
# `notify` v8 is the latest stable; `macos_fsevent` is enabled by default
# on macOS. `notify-debouncer-full` collapses writeв†’closeв†’re-written
# into a single event so a 30 MB PDF drop doesn't fire 6 spurious events.
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-full = "0.5"

# в”Ђв”Ђ Issue #270 вЂ” Barcode detection в”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђ
# `rxing` is a Rust port of the ZXing barcode library. We enable the
# `image` and `image_formats` features for the high-level
# `helpers::detect_in_image` API, plus `multi_barcode_readers` for
# pages with more than one code, and `encoding_rs` for the CharacterSet
# decoder.
rxing = { version = "0.9", default-features = false, features = [
    "image",
    "image_formats",
    "decoders",
    "encoding_rs",
    "full_barcode_format_support",
    "multi_barcode_readers",
] }

# в”Ђв”Ђ Issue #274 вЂ” Email/FTP/MIS integrations в”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђ
# `lettre` is the canonical SMTP client for Rust. `rustls-tls` matches the
# `reqwest` config so we don't pull openssl-sys. `suppaftp` is a maintained
# fork of the unmaintained `ftp` crate with explicit TLS support via `rustls`.
lettre = { version = "0.11", default-features = false, features = [
    "rustls-tls", "smtp-transport", "builder", "hostname"
] }
suppaftp = { version = "6", default-features = false, features = ["rustls"] }

# в”Ђв”Ђ Issue #258 вЂ” World-class compression в”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђ
# `zopfli` produces 3-8% smaller deflate output than zlib at `best`. It is
# slow (minutes for a 30 MB PDF) so we expose it as an opt-in flag in
# `CompressionOptions`.
zopfli = { version = "0.8", default-features = false, features = ["std", "zlib"] }
# `ttf-parser` is the font subsetter used for #258 font-subsetting.
ttf-parser = "0.25"

# в”Ђв”Ђ Issue #256 вЂ” Performance metrics в”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђ
# `metrics` provides the counter/histogram facade; we use it from the hot
# Tauri command paths.
metrics = "0.24"

# в”Ђв”Ђ Issue #281 вЂ” Viewer: eyedropper + plate view в”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђ
# `palette` extracts the dominant color from a 1Г—1 image readback (used
# for the eyedropper tool). `palette` is tiny and has no deps.
palette = "0.7"

# в”Ђв”Ђ Issue #256 вЂ” Metrics helpers в”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђ
# `once_cell::sync::Lazy` for the cold-start timer; `libc` is needed for
# the macOS `task_info(MACH_TASK_BASIC_INFO)` call to read RSS without
# pulling in `mach2`.
once_cell = "1"
libc = "0.2"
